# CityManager

./: .env  .env.example  .pdm-python  .pre-commit-config.yaml  README.md  __main__.py  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 145c799f14dd_initial_migration.py
src/api/: app.py  router.py
src/api/city/: router.py  service.py
src/config/: db_settings.py  settings.py
src/db/: city_model.py  database.py  tables.py
src/utils/: city_utils.py
