[project]
name = "CDNhw"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "uvicorn>=0.30.6",
    "pydantic-settings>=2.4.0",
    "fastapi[standard]>=0.112.2",
    "sqlalchemy>=2.0.32",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "alembic>=1.13.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
